--- a/ClientJava/build.gradle
+++ b/ClientJava/build.gradle
@@ -21,4 +21,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.12'
     compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.1.4.RELEASE'
+    compile 'com.google.guava:guava:27.1-jre'
 }
