--- a/ServerJava/build.gradle
+++ b/ServerJava/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
     compile group: 'commons-codec', name: 'commons-codec', version: '1.12'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
+    compile 'com.google.guava:guava:27.1-jre'
 }
