--- a/ServerJava/build.gradle
+++ b/ServerJava/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile group: 'commons-codec', name: 'commons-codec', version: '1.12'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
     compile 'com.google.guava:guava:27.1-jre'
+    compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.1.4.RELEASE'
 }
